--- a/train.ipynb
+++ b/train.ipynb
@@ -82,6 +82,43 @@
     "# version 컬럼 제거\n",
     "train = train.drop('version', axis=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 구매 기록 데이터 합치기\n",
+    "transactions = pd.concat([transactions_v1, transactions_v2])\n",
+    "transactions = transactions.sort_values(['msno', 'transaction_date']).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# msno 고유값 추출\n",
+    "unique_msno = pd.concat([\n",
+    "    members[['msno']],\n",
+    "    train[['msno']],\n",
+    "    transactions[['msno']]\n",
+    "]).drop_duplicates().reset_index(drop=True)\n",
+    "\n",
+    "# msno에 대한 고유 번호 할당\n",
+    "unique_msno['msno_num'] = range(1, len(unique_msno) + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_msno.to_csv('./unique_msno.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
