--- a/kimujung/EDA.ipynb
+++ b/kimujung/EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "2                  2  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,23 +203,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "6   is_churn  (타겟 데이터)\n",
-    "\n",
-    "7   is_back (재가입)\n",
-    "\n",
-    "8   payment_plan_sum (아이디 별 총 구독 기간)\n",
-    "\n",
-    "9   plan_list_price (아이디 별 예상 지불 금액)\n",
-    "\n",
-    "10  actual_amount_paid (아이디 별 실제 지불 금액)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +475,7 @@
        "max              2.025100e+07       1.000000         244.000000  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +500,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +523,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +546,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -696,8 +681,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6   is_churn  (타겟 데이터)\n",
+    "\n",
+    "7   is_back (재가입)\n",
+    "\n",
+    "8   payment_plan_sum (아이디 별 총 구독 기간)\n",
+    "\n",
+    "9   plan_list_price (아이디 별 예상 지불 금액)\n",
+    "\n",
+    "10  actual_amount_paid (아이디 별 실제 지불 금액)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "is_churn\n",
+       "0    5267\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['is_churn'][df['is_back'] == 1].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +786,7 @@
        "Name: count, Length: 1379, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +818,7 @@
        "Name: count, Length: 5378, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -819,19 +841,20 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 예상 지불가격이 0인 사람\n",
     "aa = df[df['plan_list_price'] == 0]\n",
     "aa['is_churn'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -852,13 +875,71 @@
        "Name: count, Length: 5506, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['actual_amount_paid'].value_counts().sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "is_churn\n",
+       "1    1108\n",
+       "0      18\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 실제 지불가격이 0인 사람\n",
+    "aa = df[df['actual_amount_paid'] == 0]\n",
+    "aa['is_churn'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "plan_list_price\n",
+       "0         2\n",
+       "1        22\n",
+       "35       16\n",
+       "50        1\n",
+       "70        7\n",
+       "         ..\n",
+       "9705      1\n",
+       "10275     1\n",
+       "13186     1\n",
+       "16800     1\n",
+       "17433     1\n",
+       "Name: count, Length: 5377, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa = df[df['actual_amount_paid'] != 0]\n",
+    "aa['plan_list_price'].value_counts().sort_index()"
    ]
   }
  ],
