--- a/jaehyeok/jaehyeok.ipynb
+++ b/jaehyeok/jaehyeok.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-08T16:30:58.061256Z",
-     "start_time": "2025-02-08T16:30:57.562569Z"
+     "end_time": "2025-02-09T12:34:47.125290Z",
+     "start_time": "2025-02-09T12:34:46.575801Z"
     }
    },
    "cell_type": "code",
@@ -214,8 +214,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-08T16:31:45.625177Z",
-     "start_time": "2025-02-08T16:31:39.081127Z"
+     "end_time": "2025-02-09T13:58:37.990759Z",
+     "start_time": "2025-02-09T13:58:31.584654Z"
     }
    },
    "cell_type": "code",
@@ -1235,12 +1235,36 @@
        " ...}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-09T13:58:44.647756Z",
+     "start_time": "2025-02-09T13:58:44.644202Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "len(df_members)",
+   "id": "beeeba5565b3cfe8",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6769473"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -1276,8 +1300,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-08T16:55:22.746714Z",
-     "start_time": "2025-02-08T16:55:11.401872Z"
+     "end_time": "2025-02-09T12:55:14.503484Z",
+     "start_time": "2025-02-09T12:55:02.447865Z"
     }
    },
    "cell_type": "code",
@@ -1334,12 +1358,12 @@
        " max    1.561000e+03  4.110700e+04  4.925000e+03  9.194059e+06  )"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -1438,178 +1462,263 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-08T18:29:49.327264Z",
-     "start_time": "2025-02-08T18:29:10.222029Z"
+     "end_time": "2025-02-09T12:52:01.551269Z",
+     "start_time": "2025-02-09T12:37:29.898771Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 변환할 파일 리스트\n",
+    "file_list = [f\"C:/ex_data/user_logs_encoded_part{i}.csv\" for i in range(1, 9)]\n",
+    "\n",
+    "for file in file_list:\n",
+    "    # CSV 파일 읽기\n",
+    "    df = pd.read_csv(file)\n",
+    "\n",
+    "    # msno 컬럼을 Int64로 변환\n",
+    "    df['msno'] = df['msno'].astype('Int64')\n",
+    "\n",
+    "    # 다시 저장 (덮어쓰기)\n",
+    "    df.to_csv(file, index=False)\n",
+    "\n",
+    "    print(f\"변환 완료: {file}\")\n",
+    "\n",
+    "print(\"모든 파일의 msno를 Int64로 변환 완료!\")\n"
+   ],
+   "id": "acb9c6bf5473c19b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "변환 완료: C:/ex_data/user_logs_encoded_part1.csv\n",
+      "변환 완료: C:/ex_data/user_logs_encoded_part2.csv\n",
+      "변환 완료: C:/ex_data/user_logs_encoded_part3.csv\n",
+      "변환 완료: C:/ex_data/user_logs_encoded_part4.csv\n",
+      "변환 완료: C:/ex_data/user_logs_encoded_part5.csv\n",
+      "변환 완료: C:/ex_data/user_logs_encoded_part6.csv\n",
+      "변환 완료: C:/ex_data/user_logs_encoded_part7.csv\n",
+      "변환 완료: C:/ex_data/user_logs_encoded_part8.csv\n",
+      "모든 파일의 msno를 Int64로 변환 완료!\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-09T12:55:02.446868Z",
+     "start_time": "2025-02-09T12:54:38.298266Z"
     }
    },
    "cell_type": "code",
    "source": [
     "split_df = pd.read_csv(\"C:/ex_data/user_logs_encoded_part7.csv\")\n",
-    "split_df.describe()"
+    "split_df.info()"
    ],
    "id": "c6c5c6319e8a7d77",
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 50000000 entries, 0 to 49999999\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column      Dtype  \n",
+      "---  ------      -----  \n",
+      " 0   msno        float64\n",
+      " 1   date        int64  \n",
+      " 2   num_25      int64  \n",
+      " 3   num_50      int64  \n",
+      " 4   num_75      int64  \n",
+      " 5   num_985     int64  \n",
+      " 6   num_100     int64  \n",
+      " 7   num_unq     int64  \n",
+      " 8   total_secs  float64\n",
+      "dtypes: float64(2), int64(7)\n",
+      "memory usage: 3.4 GB\n"
+     ]
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "---\n",
+    "# 데이터 병합"
+   ],
+   "id": "13eb5c2760b0ac5b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-09T13:10:02.533184Z",
+     "start_time": "2025-02-09T13:01:48.826781Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "import glob\n",
+    "\n",
+    "# 파일 경로 리스트 (user_logs_v2_encoded.csv + user_logs_encoded_part*.csv 포함)\n",
+    "file_list = [\"C:/ex_data/user_logs_v2_encoded.csv\"] + glob.glob(\"C:/ex_data/user_logs_encoded_part*.csv\")\n",
+    "\n",
+    "# msno별 데이터를 저장할 딕셔너리 (메모리 절약)\n",
+    "aggregated_data = {}\n",
+    "\n",
+    "# 각 파일을 청크 단위로 읽어서 그룹화 & 누적\n",
+    "for file in file_list:\n",
+    "    print(f\"파일 처리 중: {file}\")\n",
+    "\n",
+    "    # CSV 파일 읽기 (청크 단위 처리)\n",
+    "    for chunk in pd.read_csv(file, chunksize=3_000_000):  # 청크 크기 조절 가능\n",
+    "        # msno 기준으로 그룹화하여 데이터 합산\n",
+    "        grouped = chunk.groupby(\"msno\").agg(\n",
+    "            num_25=(\"num_25\", \"sum\"),\n",
+    "            num_50=(\"num_50\", \"sum\"),\n",
+    "            num_75=(\"num_75\", \"sum\"),\n",
+    "            num_985=(\"num_985\", \"sum\"),\n",
+    "            num_100=(\"num_100\", \"sum\"),\n",
+    "            num_unq=(\"num_unq\", \"sum\"),\n",
+    "            total_secs=(\"total_secs\", \"sum\"),\n",
+    "            log_start=(\"date\", \"min\"),  # 가장 빠른 날짜\n",
+    "            log_end=(\"date\", \"max\")  # 가장 마지막 날짜\n",
+    "        ).reset_index()\n",
+    "\n",
+    "        # 🏗 기존 데이터와 병합하여 누적 (딕셔너리를 활용한 병합)\n",
+    "        for row in grouped.itertuples(index=False):\n",
+    "            msno = row.msno\n",
+    "            if msno in aggregated_data:\n",
+    "                aggregated_data[msno][\"num_25\"] += row.num_25\n",
+    "                aggregated_data[msno][\"num_50\"] += row.num_50\n",
+    "                aggregated_data[msno][\"num_75\"] += row.num_75\n",
+    "                aggregated_data[msno][\"num_985\"] += row.num_985\n",
+    "                aggregated_data[msno][\"num_100\"] += row.num_100\n",
+    "                aggregated_data[msno][\"num_unq\"] += row.num_unq\n",
+    "                aggregated_data[msno][\"total_secs\"] += row.total_secs\n",
+    "                aggregated_data[msno][\"log_start\"] = min(aggregated_data[msno][\"log_start\"], row.log_start)\n",
+    "                aggregated_data[msno][\"log_end\"] = max(aggregated_data[msno][\"log_end\"], row.log_end)\n",
+    "            else:\n",
+    "                aggregated_data[msno] = {\n",
+    "                    \"num_25\": row.num_25,\n",
+    "                    \"num_50\": row.num_50,\n",
+    "                    \"num_75\": row.num_75,\n",
+    "                    \"num_985\": row.num_985,\n",
+    "                    \"num_100\": row.num_100,\n",
+    "                    \"num_unq\": row.num_unq,\n",
+    "                    \"total_secs\": row.total_secs,\n",
+    "                    \"log_start\": row.log_start,\n",
+    "                    \"log_end\": row.log_end\n",
+    "                }\n",
+    "\n",
+    "# 딕셔너리를 DataFrame으로 변환 (msno를 컬럼으로 유지)\n",
+    "df_final = pd.DataFrame.from_dict(aggregated_data, orient=\"index\")\n",
+    "\n",
+    "# msno를 일반 컬럼으로 유지하고 인덱스 제거\n",
+    "df_final.index.name = \"msno\"\n",
+    "df_final.reset_index(inplace=True)\n",
+    "\n",
+    "# CSV 파일로 저장 (인덱스 없이)\n",
+    "df_final.to_csv(\"C:/ex_data/user_logs_summary.csv\", index=False)\n",
+    "\n",
+    "print(\"저장 완료\")\n",
+    "\n"
+   ],
+   "id": "f69e502423f0c9d3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "파일 처리 중: C:/ex_data/user_logs_v2_encoded.csv\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part1.csv\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part2.csv\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part3.csv\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part4.csv\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part5.csv\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part6.csv\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part7.csv\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part8.csv\n",
+      "저장 완료\n"
+     ]
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-09T13:57:01.672172Z",
+     "start_time": "2025-02-09T13:56:57.697996Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_csv(\"C:/ex_data/user_logs_summary.csv\")\n",
+    "df.info(), df.describe(), len(df)"
+   ],
+   "id": "7590d58aaac88939",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5169234 entries, 0 to 5169233\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column      Dtype  \n",
+      "---  ------      -----  \n",
+      " 0   msno        float64\n",
+      " 1   num_25      int64  \n",
+      " 2   num_50      int64  \n",
+      " 3   num_75      int64  \n",
+      " 4   num_985     int64  \n",
+      " 5   num_100     int64  \n",
+      " 6   num_unq     int64  \n",
+      " 7   total_secs  float64\n",
+      " 8   log_start   int64  \n",
+      " 9   log_end     int64  \n",
+      "dtypes: float64(2), int64(8)\n",
+      "memory usage: 394.4 MB\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "               msno          date        num_25        num_50        num_75  \\\n",
-       "count  4.976952e+07  5.000000e+07  5.000000e+07  5.000000e+07  5.000000e+07   \n",
-       "mean   3.384216e+06  2.015739e+07  6.514066e+00  1.639796e+00  1.016934e+00   \n",
-       "std    1.953749e+06  6.180708e+03  1.478508e+01  4.261290e+00  2.173412e+00   \n",
-       "min    1.000000e+00  2.015010e+07  0.000000e+00  0.000000e+00  0.000000e+00   \n",
-       "25%    1.693119e+06  2.015082e+07  0.000000e+00  0.000000e+00  0.000000e+00   \n",
-       "50%    3.382835e+06  2.016031e+07  2.000000e+00  1.000000e+00  0.000000e+00   \n",
-       "75%    5.073482e+06  2.016091e+07  7.000000e+00  2.000000e+00  1.000000e+00   \n",
-       "max    6.769469e+06  2.017023e+07  1.646500e+04  1.262000e+03  6.020000e+02   \n",
-       "\n",
-       "            num_985       num_100       num_unq    total_secs  \n",
-       "count  5.000000e+07  5.000000e+07  5.000000e+07  5.000000e+07  \n",
-       "mean   1.128206e+00  3.070683e+01  3.008228e+01 -1.459506e+12  \n",
-       "std    2.863540e+00  4.252039e+01  3.375954e+01  1.161467e+14  \n",
-       "min    0.000000e+00  0.000000e+00  1.000000e+00 -9.223372e+15  \n",
-       "25%    0.000000e+00  6.000000e+00  8.000000e+00  1.890826e+03  \n",
-       "50%    0.000000e+00  1.700000e+01  1.900000e+01  4.625689e+03  \n",
-       "75%    1.000000e+00  3.800000e+01  4.000000e+01  1.025783e+04  \n",
-       "max    1.636000e+03  4.200400e+04  3.869000e+03  9.223372e+15  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>msno</th>\n",
-       "      <th>date</th>\n",
-       "      <th>num_25</th>\n",
-       "      <th>num_50</th>\n",
-       "      <th>num_75</th>\n",
-       "      <th>num_985</th>\n",
-       "      <th>num_100</th>\n",
-       "      <th>num_unq</th>\n",
-       "      <th>total_secs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>4.976952e+07</td>\n",
-       "      <td>5.000000e+07</td>\n",
-       "      <td>5.000000e+07</td>\n",
-       "      <td>5.000000e+07</td>\n",
-       "      <td>5.000000e+07</td>\n",
-       "      <td>5.000000e+07</td>\n",
-       "      <td>5.000000e+07</td>\n",
-       "      <td>5.000000e+07</td>\n",
-       "      <td>5.000000e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>3.384216e+06</td>\n",
-       "      <td>2.015739e+07</td>\n",
-       "      <td>6.514066e+00</td>\n",
-       "      <td>1.639796e+00</td>\n",
-       "      <td>1.016934e+00</td>\n",
-       "      <td>1.128206e+00</td>\n",
-       "      <td>3.070683e+01</td>\n",
-       "      <td>3.008228e+01</td>\n",
-       "      <td>-1.459506e+12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1.953749e+06</td>\n",
-       "      <td>6.180708e+03</td>\n",
-       "      <td>1.478508e+01</td>\n",
-       "      <td>4.261290e+00</td>\n",
-       "      <td>2.173412e+00</td>\n",
-       "      <td>2.863540e+00</td>\n",
-       "      <td>4.252039e+01</td>\n",
-       "      <td>3.375954e+01</td>\n",
-       "      <td>1.161467e+14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>2.015010e+07</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>-9.223372e+15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>1.693119e+06</td>\n",
-       "      <td>2.015082e+07</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>6.000000e+00</td>\n",
-       "      <td>8.000000e+00</td>\n",
-       "      <td>1.890826e+03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>3.382835e+06</td>\n",
-       "      <td>2.016031e+07</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>1.700000e+01</td>\n",
-       "      <td>1.900000e+01</td>\n",
-       "      <td>4.625689e+03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>5.073482e+06</td>\n",
-       "      <td>2.016091e+07</td>\n",
-       "      <td>7.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>3.800000e+01</td>\n",
-       "      <td>4.000000e+01</td>\n",
-       "      <td>1.025783e+04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>6.769469e+06</td>\n",
-       "      <td>2.017023e+07</td>\n",
-       "      <td>1.646500e+04</td>\n",
-       "      <td>1.262000e+03</td>\n",
-       "      <td>6.020000e+02</td>\n",
-       "      <td>1.636000e+03</td>\n",
-       "      <td>4.200400e+04</td>\n",
-       "      <td>3.869000e+03</td>\n",
-       "      <td>9.223372e+15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "(None,\n",
+       "                msno        num_25        num_50        num_75       num_985  \\\n",
+       " count  5.169234e+06  5.169234e+06  5.169234e+06  5.169234e+06  5.169234e+06   \n",
+       " mean   3.385590e+06  5.154293e+02  1.296803e+02  8.042572e+01  8.939055e+01   \n",
+       " std    1.953974e+06  1.685076e+03  3.854647e+02  2.349230e+02  3.152845e+02   \n",
+       " min    1.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+       " 25%    1.693686e+06  3.000000e+00  1.000000e+00  0.000000e+00  0.000000e+00   \n",
+       " 50%    3.386750e+06  1.600000e+01  4.000000e+00  2.000000e+00  2.000000e+00   \n",
+       " 75%    5.077058e+06  1.680000e+02  4.700000e+01  2.700000e+01  2.600000e+01   \n",
+       " max    6.769473e+06  9.582370e+05  5.274700e+04  3.907100e+04  1.014050e+05   \n",
+       " \n",
+       "             num_100       num_unq    total_secs     log_start       log_end  \n",
+       " count  5.169234e+06  5.169234e+06  5.169234e+06  5.169234e+06  5.169234e+06  \n",
+       " mean   2.430624e+03  2.379082e+03 -1.095741e+14  2.015614e+07  2.016012e+07  \n",
+       " std    7.798727e+03  6.795478e+03  2.339226e+15  6.245993e+03  7.570406e+03  \n",
+       " min    0.000000e+00  1.000000e+00 -6.917529e+17  2.015010e+07  2.015010e+07  \n",
+       " 25%    2.000000e+00  8.000000e+00  1.065144e+03  2.015042e+07  2.015110e+07  \n",
+       " 50%    2.500000e+01  4.200000e+01  7.942121e+03  2.015122e+07  2.016061e+07  \n",
+       " 75%    5.730000e+02  6.610000e+02  1.417714e+05  2.016071e+07  2.017013e+07  \n",
+       " max    7.873280e+05  2.850480e+05  9.223372e+15  2.017033e+07  2.017033e+07  ,\n",
+       " 5169234)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 34
+   "execution_count": 11
   }
  ],
  "metadata": {
