--- a/jaehyeok/jaehyeok.ipynb
+++ b/jaehyeok/jaehyeok.ipynb
@@ -214,8 +214,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-09T13:58:37.990759Z",
-     "start_time": "2025-02-09T13:58:31.584654Z"
+     "end_time": "2025-02-09T14:02:56.743383Z",
+     "start_time": "2025-02-09T14:02:50.308503Z"
     }
    },
    "cell_type": "code",
@@ -1235,22 +1235,22 @@
        " ...}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-09T13:58:44.647756Z",
-     "start_time": "2025-02-09T13:58:44.644202Z"
+     "end_time": "2025-02-09T14:03:04.623789Z",
+     "start_time": "2025-02-09T14:03:04.620725Z"
     }
    },
    "cell_type": "code",
-   "source": "len(df_members)",
+   "source": "len(msno_mapping)",
    "id": "beeeba5565b3cfe8",
    "outputs": [
     {
@@ -1259,12 +1259,12 @@
        "6769473"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -1562,7 +1562,6 @@
    },
    "cell_type": "code",
    "source": [
-    "import pandas as pd\n",
     "import glob\n",
     "\n",
     "# 파일 경로 리스트 (user_logs_v2_encoded.csv + user_logs_encoded_part*.csv 포함)\n",
@@ -1719,6 +1718,116 @@
     }
    ],
    "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "---\n",
+    "# log가 존재하지 않는 user msno 찾기"
+   ],
+   "id": "b666ed3353958eff"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-09T14:13:09.166730Z",
+     "start_time": "2025-02-09T14:12:58.566426Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df_members = pd.read_csv(\"C:/ex_data/members_encoded.csv\")\n",
+    "df_summary = pd.read_csv(\"C:/ex_data/user_logs_summary.csv\")\n",
+    "no_logs_msno = set(df_members['msno_encoded']) - set(df_summary['msno'])\n",
+    "print(f'no log user : {len(no_logs_msno)}')\n",
+    "\n",
+    "df_no_log_user = pd.DataFrame({'msno' : list(no_logs_msno)}).to_csv('C:/ex_data/no_log_user.csv', index=False)\n"
+   ],
+   "id": "2d514cba39094c6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no log user : 1600239\n"
+     ]
+    }
+   ],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-09T14:25:18.745570Z",
+     "start_time": "2025-02-09T14:22:23.226515Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import glob\n",
+    "\n",
+    "df_no_log_users = pd.read_csv(\"C:/ex_data/no_log_user.csv\")\n",
+    "missing_msno_set = set(df_no_log_users[\"msno\"])\n",
+    "\n",
+    "file_list = [\"C:/ex_data/user_logs_v2_encoded.csv\"] + glob.glob(\"C:/ex_data/user_logs_encoded_part*.csv\")\n",
+    "\n",
+    "# 각 로그 파일을 순차적으로 읽어서 `no_log_user.csv`에 있는 msno가 존재하는지 확인\n",
+    "for file in file_list:\n",
+    "    print(f\"파일 처리 중: {file}\")\n",
+    "    \n",
+    "    # CSV 파일을 청크 단위로 처리\n",
+    "    for chunk in pd.read_csv(file, chunksize=3_000_000):\n",
+    "        # 현재 청크에서 msno 값이 존재하는지 확인\n",
+    "        present_msno = set(chunk[\"msno\"].unique())\n",
+    "\n",
+    "        for msno in missing_msno_set:\n",
+    "            if msno in present_msno:\n",
+    "                print(f\"msno {msno} : 있다\")\n",
+    "            \n",
+    "    \n",
+    "    print(f\"{file} 처리 완료.\\n\")\n",
+    "\n",
+    "print(\"모든 파일 체크 완료!\")\n"
+   ],
+   "id": "2f397d7d302cb611",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "파일 처리 중: C:/ex_data/user_logs_v2_encoded.csv\n",
+      "C:/ex_data/user_logs_v2_encoded.csv 처리 완료.\n",
+      "\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part1.csv\n",
+      "C:/ex_data\\user_logs_encoded_part1.csv 처리 완료.\n",
+      "\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part2.csv\n",
+      "C:/ex_data\\user_logs_encoded_part2.csv 처리 완료.\n",
+      "\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part3.csv\n",
+      "C:/ex_data\\user_logs_encoded_part3.csv 처리 완료.\n",
+      "\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part4.csv\n",
+      "C:/ex_data\\user_logs_encoded_part4.csv 처리 완료.\n",
+      "\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part5.csv\n",
+      "C:/ex_data\\user_logs_encoded_part5.csv 처리 완료.\n",
+      "\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part6.csv\n",
+      "C:/ex_data\\user_logs_encoded_part6.csv 처리 완료.\n",
+      "\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part7.csv\n",
+      "C:/ex_data\\user_logs_encoded_part7.csv 처리 완료.\n",
+      "\n",
+      "파일 처리 중: C:/ex_data\\user_logs_encoded_part8.csv\n",
+      "C:/ex_data\\user_logs_encoded_part8.csv 처리 완료.\n",
+      "\n",
+      "모든 파일 체크 완료!\n"
+     ]
+    }
+   ],
+   "execution_count": 30
   }
  ],
  "metadata": {
